[feature] api features and test codes coverage all completed